# rust-in-python

./: hello.py  pyproject.toml
digits-pi/: Cargo.toml  Makefile  pi.py  pyproject.toml
digits-pi/src/: lib.rs
pycalc-cli/: Cargo.toml  Makefile  calc.py  pyproject.toml
pycalc-cli/src/: lib.rs
pyo3-example/: Cargo.toml  pyproject.toml
rust-exceptions/: Cargo.toml  Makefile  pydiv.py  pyproject.toml
rust-exceptions/src/: lib.rs
